--- a/css/home.css
+++ b/css/home.css
@@ -1,7 +1,4 @@
-div#maximizeblogAndLogOption {
-    display: flex;
-    flex-direction: row;
-}
+
 div#blogs_show {
     width: 70%;
     background: red;
@@ -16,7 +13,9 @@ div#singup_text {
     margin-left: 2vw;
     margin-right: 2vw;
 }
-
+div#email_signup_and_login {
+    width: 30%;
+}
 
 div#login {
     margin-left: 4vw;
@@ -50,7 +49,7 @@ div#login {
     left: 0.05vw;
 }
 button#loginbutton {
-    margin-right: 0.5vw;
+    margin-left: 0.5vw;
 }
 
 
@@ -136,7 +135,51 @@ div#btn2 {
   width: 6vw;
 }
 
+#firstc_container {
+  height: 42vw;
+  width: 100%;
+  background: url(../img/res_systempic/jacco.jpg);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+}
 
-#firstc_container{
-  background: url('../img/');
+#Display_home_message H1 {
+  margin: 0;
+  padding: 0;
+  font-size: 2.5vw;
+  color: white;
+  text-shadow: 0.1vw 0.1vw red;
+}
+
+#Display_home_message {
+  position: relative;
+  left: 4vw;
+  top: 14vw;
+  width: 41vw;
+}
+div#log_btns {
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  top: 14vw;
+  left: 7vw;
+  width: 19vw;
+}
+
+
+#Display_home_message p {
+  color: white;
+  font-size: 1.5vw;
+  width: 27vw;
+  text-shadow: 0.04vw 0.04vw #355dec;
+}
+
+div#login {
+  margin-left: 4vw;
+  display: flex;
+  flex-direction: column;
+  width: 28vw;
+  position: relative;
+  top: 11vw;
+  left: 20vw;
 }
