--- a/pug/home_body.pug
+++ b/pug/home_body.pug
@@ -25,17 +25,46 @@ html(lang="en")
                     input.inputclass(type="text" placeholdet='Email' required)
                     input.inputclass(type="text" placeholdet='Password' required)
                     button.loginbtn login 
-            
+
+            #online_and_total_users 
+                .maindiv 
+                    .total.octagonx
+                        h4 Total 
+                        p 1000+
+                    .online.octagonx
+                        h4 Total 
+                        p 500+
+                    .today_totaal_post.octagonx
+                        h4 Today posts 
+                        p 100+
             #anotherContainer 
                 #message_and_some_defination 
                     h1 Explore ourself in a new way
-                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis officiis repellendus tempora provident ipsum obcaecati exercitationem deserunt quasi nam mollitia vero iste assumenda, asperiores deleniti corrupti necessitatibus qui fugit atque.
+                    p Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum culpa recusandae doloremque quisquam alias, repudiandae, sint quidem ut, voluptas delectus dolores facere sapiente atque consequatur esse. Minima a expedita officia deserunt harum molestias nam assumenda sapiente voluptas debitis, nulla corrupti obcaecati quis excepturi amet quo sint totam blanditiis, modi ullam laudantium quia laborum qui? Voluptatem suscipit minima laborum ea voluptatum?
 
             #client_feedback 
                 #feedback_message 
                     h1 What our Client’s Say about us
                     p Who are in extremely love with eco friendly system.
+                .usercomment_sectin
+                    .card(style='width: 18rem;')
+                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                        .card-body
+                            p.card-text
+                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                    .card(style='width: 18rem;')
+                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                        .card-body
+                            p.card-text
+                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                    .card(style='width: 18rem;')
+                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                        .card-body
+                            p.card-text
+                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+
 
 
 script 
     include ../js/home_body.js
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
