--- a/css/home.css
+++ b/css/home.css
@@ -1,55 +1,60 @@
-
 div#blogs_show {
-    width: 70%;
-    background: red;
+  width: 70%;
+  background: red;
 }
+
 div#singUpAndInText {
-    display: flex;
-    flex-direction: row;
-    margin-left: 4vw;
-    margin-bottom: 0.2vw;
+  display: flex;
+  flex-direction: row;
+  margin-left: 4vw;
+  margin-bottom: 0.2vw;
 }
+
 div#singup_text {
-    margin-left: 2vw;
-    margin-right: 2vw;
+  margin-left: 2vw;
+  margin-right: 2vw;
 }
+
 div#email_signup_and_login {
-    width: 30%;
+  width: 30%;
 }
 
 div#login {
-    margin-left: 4vw;
-    display: flex;
-    flex-direction: column;
+  margin-left: 4vw;
+  display: flex;
+  flex-direction: column;
 }
 
-.inputclass{
-    width: 15vw;
-    height: 1.5vw;
-    margin-top: 0.4vw;
+.inputclass {
+  width: 15vw;
+  height: 1.5vw;
+  margin-top: 0.4vw;
 }
+
 .loginbtn {
-    width: 6vw;
-    font-size: 1.2vw;
-    height: 2.3vw;
-    font-weight: bold;
-    margin-top: 0.4vw;
-    position: relative;
-    border: 0.1vw solid  #00d4ff;
-    border-radius: 3vw;
-}
-.loginbtn:hover{
-    background: linear-gradient(90deg, #020024 0%, #340979 37%, #00d4ff 94%);
-    color: white;
+  width: 6vw;
+  font-size: 1.2vw;
+  height: 2.3vw;
+  font-weight: bold;
+  margin-top: 0.4vw;
+  position: relative;
+  border: 0.1vw solid #00d4ff;
+  border-radius: 3vw;
 }
 
-.loginbtn:active{
-    position: relative;
-    top: 0.05vw;
-    left: 0.05vw;
+.loginbtn:hover {
+  background: linear-gradient(90deg, #020024 0%, #340979 37%, #00d4ff 94%);
+  color: white;
 }
+
+.loginbtn:active {
+  position: relative;
+  top: 0.05vw;
+  left: 0.05vw;
+}
+
 button#loginbutton {
-    margin-left: 0.5vw;
+  margin-left: 0.5vw;
 }
 
 
@@ -62,13 +67,13 @@ button#loginbutton {
   background-color: #fff;
   border-radius: 3vw;
   border-style: none;
-  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
+  box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px, rgba(0, 0, 0, .14) 0 6px 10px 0, rgba(0, 0, 0, .12) 0 1px 18px 0;
   box-sizing: border-box;
   color: #3c4043;
   cursor: pointer;
   display: inline-flex;
   fill: currentcolor;
-  font-family: "Google Sans",Roboto,Arial,sans-serif;
+  font-family: "Google Sans", Roboto, Arial, sans-serif;
   font-size: 1.3vw;
   font-weight: 500;
   height: 3vw;
@@ -81,12 +86,12 @@ button#loginbutton {
   position: relative;
   text-align: center;
   text-transform: none;
-  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1),opacity 15ms linear 30ms,transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
+  transition: box-shadow 280ms cubic-bezier(.4, 0, .2, 1), opacity 15ms linear 30ms, transform 270ms cubic-bezier(0, 0, .2, 1) 0ms;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
   width: auto;
-  will-change: transform,opacity;
+  will-change: transform, opacity;
   z-index: 0;
 }
 
@@ -131,6 +136,7 @@ div#btn1 {
   width: 6vw;
   margin-right: 1vw;
 }
+
 div#btn2 {
   width: 6vw;
 }
@@ -157,6 +163,7 @@ div#btn2 {
   top: 14vw;
   width: 41vw;
 }
+
 div#log_btns {
   display: flex;
   flex-direction: row;
@@ -205,6 +212,7 @@ div#login {
   justify-content: center;
   align-items: center;
 }
+
 .octagonx:before {
   content: "";
   width: 8.26vw;
@@ -216,6 +224,7 @@ div#login {
   border-left: 2.4vw solid rgb(255, 255, 255);
   border-right: 2.4vw solid rgb(255, 255, 255);
 }
+
 .octagonx:after {
   content: "";
   width: 8.26vw;
@@ -228,17 +237,20 @@ div#login {
   border-right: 2.4vw solid rgb(255, 255, 255);
 }
 
-.octagonx h4 , .octagonx p{
+.octagonx h4,
+.octagonx p {
   padding: 0;
   margin: 0;
   z-index: 100;
 }
+
 .octagonx p {
   margin: 1vw;
   font-size: 2vw;
   font-weight: bolder;
   color: rgb(62, 240, 246);
 }
+
 .octagonx h4 {
   font-size: 2.4vw;
   color: rgb(22, 247, 255);
@@ -263,16 +275,18 @@ div#message_and_some_defination {
   width: 58vw;
 }
 
-div#message_and_some_defination h1{
+div#message_and_some_defination h1 {
   font-size: 2.5vw;
 }
 
-div#message_and_some_defination p{
+div#message_and_some_defination p {
   font-size: 1.5vw
 }
 
-*, ::after, ::before {
-  box-sizing:content-box;
+*,
+::after,
+::before {
+  box-sizing: content-box;
 }
 
 
@@ -285,32 +299,65 @@ div#feedback_message {
   flex-direction: column;
   align-items: center;
 }
-div#feedback_message h1{
+
+div#feedback_message h1 {
   font-size: 2.5vw;
 }
-div#feedback_message p{
+
+div#feedback_message p {
   font-size: 1.4vw;
 }
 
 
 
 .card {
+  width: 16vw;
   display: flex;
   align-items: center;
-  margin-right: 2vw;
 }
-.card:last-child{
-  margin-right: 0;
-}
+
 img.card-img-top {
   width: 6vw;
   height: 6vw;
   margin-top: 3vw;
   border-radius: 3vw;
 }
+
 .usercomment_sectin {
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
+
+
+/* =========================swiper css------------- */
+
+
+.swiper {
+  width: 70%;
+  height: 100%;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+
+  /* Center slide text vertically */
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  /* justify-content: center; */
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+}
+.swiper-wrapper {
+  width: 204% !important;
+}
