--- a/pug/home_body.pug
+++ b/pug/home_body.pug
@@ -7,6 +7,7 @@ html(lang="en")
         title home body
         style 
             include ../css/home.css
+            include ../css/swiper-bundle.min.css
 
     body
         #home_body_container 
@@ -46,25 +47,43 @@ html(lang="en")
                 #feedback_message 
                     h1 What our Client’s Say about us
                     p Who are in extremely love with eco friendly system.
-                .usercomment_sectin
-                    .card(style='width: 18rem;')
-                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
-                        .card-body
-                            p.card-text
-                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
-                    .card(style='width: 18rem;')
-                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
-                        .card-body
-                            p.card-text
-                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
-                    .card(style='width: 18rem;')
-                        img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
-                        .card-body
-                            p.card-text
-                                | Some quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                .swiper.jkl
+                    .usercomment_sectin.swiper-wrapper
+                        .swiper-slide.card
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Somess quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                        .card.swiper-slide
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Someas quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                        .card.swiper-slide
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Somedsa quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                        .card.swiper-slide
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Somfde quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                        .card.swiper-slide
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Ssdome quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
+                        .card.swiper-slide
+                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            .card-body
+                                p.card-text
+                                    | Somefds quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
 
+                    .swiper-pagination
 
 
 script 
     include ../js/home_body.js
+    include ../js/swiper-bundle.min.js
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
