--- a/pug/blog_and_navigation/blog_body.pug
+++ b/pug/blog_and_navigation/blog_body.pug
@@ -14,10 +14,11 @@ body
                     h2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatem mollitia labore vero? Officiis enim fuga
                 #blog_detail.max_blog_detail
                     p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi nostrum at fuga tempora corrupti praesentium rerum.
-        #minimize_blog
+        //- Repet this file using js 
+        #minimize_blog 
             .blog1.allblog
                 .img_div_mini 
-                    img(class='mimizeIMG' src="../../img/uploded/blog_images/ssss.png")
+                    img(class='mimizeIMG' src="../../img/uploded/user1/planner-4884740_1920.jpg")
                 .minimize_blog_detail
                     #blog_title.blog_title
                         h2 Lorem ipsum dolor sit amet consectetur adiporem ipsum dolororem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatem mollitia labore vero? Officiis enim fuga sit amet consectetur adipisicing elit. Est voluptatem mollitia labore vero? Officiis enim fugaisicing elit. Est voluptatem mollitia labore vero? Officiis enim fuga
@@ -25,7 +26,7 @@ body
                         p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi nostrum at fuga tempora corrupti praesentium rerum.
             .blog2.allblog
                 .img_div_mini 
-                    img(class='mimizeIMG' src="../../img/uploded/blog_images/ssss.png")
+                    img(class='mimizeIMG' src="../../img/uploded/user1/mike-swigunski-QMOG6Mt73d4-unsplash.jpg")
                 .minimize_blog_detail
                     #blog_title.blog_title
                         h2 Lorem ipsum dolor sit amet consectetur adiLorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatem mollitia labore vero? Officiis enim fugapisicing elit. Est voluptatem mollitia labore vero? Officiis enim fuga
@@ -33,7 +34,7 @@ body
                         p Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi nostrum at fuga tempora corrupti praesepsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum, laborum! Modi quam, quasi incidunt ea magni ullam. Dolores, accusamus labore. Nobis temporibus eligendi nostrum at fuga tempora corrupti praesentium rerum.nostrum at fuga tempora corrupti praesentium rerum.ntium rerum.nostrum at fuga tempora corrupti praesentium rerum.
             .blog3.allblog
                 .img_div_mini 
-                    img(class='mimizeIMG' src="../../img/uploded/blog_images/ssss.png")
+                    img(class='mimizeIMG' src="../../img/uploded/user2/tomato-2556426_1920.jpg")
                 .minimize_blog_detail
                     #blog_title.blog_title
                         h2 Lorem ipsum dolor sit amet consectetur adipisicing elit. Est voluptatem mollitia labore vero? Officiis enim fuga
