--- a/pug/blog_and_navigation/footer.pug
+++ b/pug/blog_and_navigation/footer.pug
@@ -20,10 +20,10 @@ html(lang="en")
                         img.fa(src='../../img/res_systempic/facebook.png')
                     .imgbox 
                         img(src='../../img/res_systempic/twitter.png')
-                    .imgbox 
-                        img.fa(src='../../img/res_systempic/facebook.png')
                     .imgbox
-                        img.fa(src='../../img/res_systempic/facebook.png')
+                        img(src='../../img/res_systempic/linkedin.png')
+                    .imgbox 
+                        img.fa(src='../../img/res_systempic/whatsap.png')
             #footer_copyright_and_menu
                 #copyrigth_message 
                     |Copyright ©2023 <span class='companyname'> NN Developer</span>
