--- a/pug/blog_and_navigation/navigation.pug
+++ b/pug/blog_and_navigation/navigation.pug
@@ -23,6 +23,10 @@ html(lang="en")
                 button.navBtn(id='nav_id_4') Report
             .mainbtn
                 img.navBtn(id='userstaticid' src='../../img/static/icon/user.png')
-                
+
+
 script 
-    include ../../js/blog/navigation.js
+    include ../../js/nav_foo_code.js
+
+
+                
