--- a/pug/home/home_body.pug
+++ b/pug/home/home_body.pug
@@ -6,8 +6,8 @@ html(lang="en")
         meta(name="viewport" content="width=device-width, initial-scale=1.0")
         title home body
         style 
-            include ../css/home.css
-            include ../css/swiper-bundle.min.css
+            include ../../css/home.css
+            include ../../css/swiper-bundle.min.css
 
     body
         #home_body_container 
@@ -50,32 +50,32 @@ html(lang="en")
                 .swiper.jkl
                     .usercomment_sectin.swiper-wrapper
                         .swiper-slide.card
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Somess quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
                         .card.swiper-slide
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Someas quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
                         .card.swiper-slide
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Somedsa quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
                         .card.swiper-slide
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Somfde quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
                         .card.swiper-slide
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Ssdome quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
                         .card.swiper-slide
-                            img.card-img-top(src='../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
+                            img.card-img-top(src='../../img/res_systempic/pexels-pixabay-414781.jpg' alt='...')
                             .card-body
                                 p.card-text
                                     | Somefds quick examp le text to build on the card title and make up the bulk of the card&apos;s content.
@@ -84,6 +84,6 @@ html(lang="en")
 
 
 script 
-    include ../js/home_body.js
-    include ../js/swiper-bundle.min.js
+    include ../../js/home/home_body.js
+    include ../../js/ext_package/swiper-bundle.min.js
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js" integrity="sha384-mQ93GR66B00ZXjt0YO5KlohRA5SY2XofN4zfuZxLkoj1gXtW8ANNCe9d5Y3eG5eD" crossorigin="anonymous"></script>
